Fixed overlapping class names

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,7 +8,7 @@
 
 
 
-.title {
+.company {
     color: white;
     font-family: 'Cinzel', serif;
     font-size: 50px;
